add how in unit test

--- a/packages/documentation/src/pages/platform/unit-testing.mdx
+++ b/packages/documentation/src/pages/platform/unit-testing.mdx
@@ -6,6 +6,8 @@
 
 **When**: Locally through npm script commands, Jenkins build (Unit), and After merging to master
 
+** How **: [/getting-started/common-tasks/test](/getting-started/common-tasks/test)
+
 **Process**:
 
 ```mermaid
