--- a/packages/documentation/src/pages/platform/index.mdx
+++ b/packages/documentation/src/pages/platform/index.mdx
@@ -3,9 +3,9 @@ title: Platform docs
 tags: platform, architecture, front end standards, tools, unit tests
 ---
 
-## About the Platform
+## About the platform
 In this documentation we will discuss our platform and how it is setup, This Platform section will detail
-specifics on how things work, site structure, architecture, tools, technologies, and any relavent 
+specifics on how things work, site structure, architecture, tools, technologies, and any relavent
 information regarding the platform.
 
 The platform is made up of 4 major components.
@@ -16,17 +16,18 @@ The platform is made up of 4 major components.
 - TeamSite
 
 ### MetalSmith
-MetalSmith is a static site generator made from Node.js. It is based off a plugin architecture which 
+MetalSmith is a static site generator made from Node.js. It is based off a plugin architecture which
 makes it very flexible when needing to customize the build process or integrating other systems into it.
 
 ### React/Redux
-React is a front-end single page application library that helps you create painless interactive UIs. 
-We use React in our platform to create web components and also individual applications within the website. 
+React is a front-end single page application library that helps you create painless interactive UIs.
+We use React in our platform to create web components and also individual applications within the website.
 The React applications are injected into specific pages. All applications can be found in `src/applications`.
 We use Redux to manage our data and the state of that data.
 
 ### Drupal CMS
-Drupal is a content management system built in PHP. We are using Drupal to manage the content on webpages. Drupals content is injected through a custom made plugin to integrate into MetalSmith, then eventually getting built into a static website. Drupal gives content people a better option to update and modify content on indiviual pages with limited technical skills.
+Drupal content is retrieved via GraphQL and pushed into the Metalsmith pipeline with a custom plugin,
+where it is then transformed into static html pages using Liquid templates.
 
 ### TeamSite
 TeamSite is a content management system built with PERL. This is the original system VA.gov was built on. Vets.gov and VA.gov were merged and needed to be integrated to use both systems without feeling like different systems. Some webpages still live under TeamSite and will eventually get ported over into the new Platform. Some components are shared such as the the MegaMenu adn the Footer. These components are injected using a script to render on TeamSite pages.
