Add new feature docs

--- a/packages/documentation/src/pages/getting-started/common-tasks/new-widget.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/new-widget.mdx
@@ -3,7 +3,7 @@ title: Creating React widgets on static content pages
 tags: react, widget, content, dynamic
 ---
 
-# Using React on static content pages
+# Creating a new React widget
 
 Note: Check out the [Adding a new feature](/getting-started/common-tasks/new-feature) doc to make sure you're trying to add the right type of feature to VA.gov.
 
