Fix broken links

--- a/packages/documentation/src/pages/documentation-guide/external-doc-page.mdx
+++ b/packages/documentation/src/pages/documentation-guide/external-doc-page.mdx
@@ -33,7 +33,7 @@ If we try to get the whole repo it will give us a rate limit error. This is also
 Example:
 
 ```
-department-of-veterans-affairs/vets.gov-team/Work Practices/Accessing-Staging.md
+department-of-veterans-affairs/vets.gov-team/Administrative/Accessing-Staging.md
 |            owner           |     repo    |           file directory           |
 ```
 
