--- a/packages/documentation/src/pages/getting-started/index.mdx
+++ b/packages/documentation/src/pages/getting-started/index.mdx
@@ -97,7 +97,7 @@ Setting up the backend and internal tools allows local test account login and st
 
 *Follow the Docker instructions, which are in the README for the `vets-api` repo.*
 
-- **Local test account login** instructions: [Accessing Staging](https://github.com/department-of-veterans-affairs/vets.gov-team/blob/master/Work%20Practices/Accessing-Staging.md)
+- **Local test account login** instructions: [Accessing Staging](https://github.com/department-of-veterans-affairs/vets.gov-team/blob/master/Administrative/Accessing-Staging.md)
 
 
 - **Internal tools setup** instructions: [Accessing internal tools](internal-tools).
