--- a/packages/documentation/src/pages/getting-started/common-tasks/new-page.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/new-page.mdx
@@ -1,6 +1,6 @@
 ---
 title: Creating a new content page
-tags: content, vagov-content, markdown, frontmatter
+tags: content, vagov-content, markdown, frontmatter, Drupal, cms, static
 ---
 
 # Creating a new content page
