--- a/packages/documentation/src/pages/getting-started/common-tasks/new-widget.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/new-widget.mdx
@@ -53,7 +53,7 @@ export default async function createMyWidget(store, widgetType) {
 }
 ```
 
-Note that we don't import the widget code unless there's a mount point in the DOM. This functio will run on every page, so we want to make sure we only download the bulk of the widget code when we're actually going to use it.
+Note that we don't import the widget code unless there's a mount point in the DOM. This function will run on every page, so we want to make sure we only download the bulk of the widget code when we're actually going to use it.
 
 ## Guidelines for using React on a static page
 
