--- a/packages/documentation/src/pages/getting-started/common-tasks/new-application.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/new-application.mdx
@@ -37,7 +37,7 @@ Here are the steps for manually setting up a new application. We're going to wal
 3. Create the file you referenced in the `entryFile` property above:
 
 ```jsx
-import '../../platform/polyfills';
+import 'platform/polyfills';
 import './sass/my-new-application.scss';
 
 import startApp from '../../platform/startup';
