--- a/packages/documentation/src/pages/getting-started/common-tasks/new-feature.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/new-feature.mdx
@@ -42,7 +42,7 @@ Widgets are the best choice if:
 
 Applications are the best choice if:
 
-- Your feature has multiple pages that need to by dyanmically created based on user or api data
+- Your feature has multiple pages that need to be dyanmically created based on user input or api data
 - Your feature requires a lot of interaction and very little of the page you need is static
 
 
