--- a/packages/documentation/src/pages/getting-started/common-tasks/new-page.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/new-page.mdx
@@ -13,4 +13,4 @@ There are two ways to add a new page to VA.gov; one is by adding it in vagov-con
 
 If you need to add a page to `vagov-content`, there is [documentation](https://github.com/department-of-veterans-affairs/vagov-content/blob/master/docs/index.md) in that repo. You should also contact the website team to coordinate with them on where the new page should live.
 
-If you need to add a page to Drupal, coordinate with the cms team.
+If you need to add a page to Drupal, coordinate with the cms team via your project manager.
