--- a/packages/documentation/src/pages/getting-started/common-tasks/new-feature.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/new-feature.mdx
@@ -21,7 +21,7 @@ On VA.gov, we use the term "[widgets](/getting-started/common-tasks/new-widget)"
 
 ### Applications
 
-The third type of feature are [applications](/getting-started/common-tasks/new-application). These are Javascript applications, written with React/Redux, that control all of the UI for a page and may have multiple client-side pages. There is an static content page for each of these applications that contains only a header, footer, and `div` for the React application to mount to. These applications have their own JS bundle and the most flexibility for how to render content for a Veteran to interact with.
+The third type of feature are [applications](/getting-started/common-tasks/new-application). These are Javascript applications, written with React/Redux, that control all of the UI for a page and may have multiple client-side pages. There is a static content page for each of these applications that contains only a header, footer, and `div` for the React application to mount to. These applications have their own JS bundle and the most flexibility for how to render content for a Veteran to interact with.
 
 Examples of applications include our multi page forms, the claim status tracker app, etc.
 
