--- a/packages/documentation/src/pages/getting-started/common-tasks/new-feature.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/new-feature.mdx
@@ -17,7 +17,7 @@ Static [content pages](/getting-started/common-tasks/new-page) are pages that ar
 
 ### Widgets
 
-On VA.gov, we use the term "[widgets](/getting-started/common-tasks/new-widget)" to describe features that implement some kind of dynamic behavior in a contained place on a page. Examples of this include our saved application widgets, which display information about in progress applications a logged user may have, which is shown on various static content pages. Typically these widgets are written in React and are lazily loaded in separate bundles from the default static pages JS bundle.
+On VA.gov, we use the term "[widgets](/getting-started/common-tasks/new-widget)" to describe features that implement some kind of dynamic behavior in a contained place on a page. Examples of this include our saved application widgets, which display information about in progress applications a signed-in user may have, which is shown on various static content pages. Typically these widgets are written in React and are lazily loaded in separate bundles from the default static pages JS bundle.
 
 ### Applications
 
