add sinon to list of testing tools

--- a/packages/documentation/src/pages/getting-started/common-tasks/new-unit-test.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/new-unit-test.mdx
@@ -11,6 +11,7 @@ tags: Mocha, Chai, Enzyme, schemaform-utils,
   - [Mocha](https://mochajs.org/) for running unit tests
   - [Chai](http://chaijs.com/) for test assertions
   - [Enzyme](https://airbnb.io/enzyme/) for mounting and inspecting React components
+  - [Sinon](https://sinonjs.org/) for stubs and spies
 - Unit tests are **collocated with application folder** in a test directory that matches the application directory structure
 ```
 - 📂 MyApplication
