add new end to end test document

--- a/packages/documentation/src/pages/getting-started/common-tasks/new-unit-test.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/new-unit-test.mdx
@@ -3,7 +3,7 @@ title: Write a unit test
 tags: Mocha, Chai, Enzyme, schemaform-utils,
 ---
 
-# Writing a unit test
+# Write a unit test
 
 ## Unit testing overview
 
