--- a/packages/documentation/src/pages/getting-started/common-tasks/new-end-to-end-test.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/new-end-to-end-test.mdx
@@ -146,7 +146,7 @@ _Command commands are available on the Nightwatch client e.g. `client.axeCheck()
 
 ## Helpers
 
-_`src/platform/testing/e2e` contains other useful helpers_
+`src/platform/testing/e2e` contains other useful helpers
 
 - [`createE2eTest(beginApplication)`](https://github.com/department-of-veterans-affairs/vets-website/blob/d721cf0581c6b7d6f26903540dfc27f26a16a7be/src/platform/testing/e2e/helpers.js#L78-L81) - disables smooth scrolling and starts and ends test
 - [`overrideSmoothFormsScrolling(client)` and `overrideFormsScrolling(client)](https://github.com/department-of-veterans-affairs/vets-website/blob/d721cf0581c6b7d6f26903540dfc27f26a16a7be/src/platform/testing/e2e/nightwatch-commands/selectYesNo.js#L2-L6) - disables smooth scrolling during end to end testing
