--- a/packages/documentation/src/pages/platform/tools/downtime-notifications.mdx
+++ b/packages/documentation/src/pages/platform/tools/downtime-notifications.mdx
@@ -19,8 +19,8 @@ Downtime Notications are a mechanism for handling outages of external services i
 1. Identify required-services for the application
     - These services should be added into [`externalServices`](https://github.com/department-of-veterans-affairs/vets-website/blob/90152b7cdf5b53d6650b44fed832995dbf7660cb/src/platform/monitoring/DowntimeNotification/config/externalServices.js) if they have not already been. The value must match that in the devops [config](https://github.com/department-of-veterans-affairs/devops/blob/a4b5432061ae60a4f77952bbe5f668a1355ee007/ansible/deployment/config/vets-api/prod-settings.local.yml.j2#L232).
     - These dependencies may not be directly accessed by your application, but are more likely to be dependencies of the API method(s) consumed by your application. For example, the Search app requires Search.gov to function, even though it doesn't directly hit Search.gov.
-1. The Downtime Notification React component is imported into the application React code, usually the topmost container.
-1. The container renders a Downtime Notification React component passing the identified dependencies as props and affected components as React children.
+1. Import the Downtime Notification React component into the application React code, usually the topmost container.
+1. In the render method, render a Downtime Notification React component passing the identified dependencies as props and the affected components as React children.
 
 ### Example
 Suppose an application _My App_ leverages a service called _Fancy Service_, and _Fancy Service_ was known to be offline for maintenance every now and then. During those timeframes, it is desirable to show a message to the user explaining that _My App_ is unavailable at this time so that users aren't given the impression that they are running into unexpected errors and so that _Fancy Service_ isn't needlessly hit. This should also be easy for engineers to do, without requiring any deployments to publish/unpublish the messaging. This is a pretty typical use case for the `DowntimeNotification` React component.
